2012-05-15  Andy Estes  <aestes@apple.com>

        Add WTF_USE_SECURITY_FRAMEWORK and use it in place of the less specific PLATFORM(MAC)
        https://bugs.webkit.org/show_bug.cgi?id=86508

        Reviewed by Sam Weinig.

        * Shared/cf/ArgumentCodersCF.cpp:
        (CoreIPC::typeFromCFTypeRef):
        (CoreIPC::encode):
        (CoreIPC::decode):
        (CoreIPC):
        * Shared/cf/ArgumentCodersCF.h:
        (CoreIPC):
        * Shared/mac/KeychainAttribute.cpp:
        * Shared/mac/KeychainAttribute.h:
        * Shared/mac/SecKeychainItemRequestData.cpp:
        * Shared/mac/SecKeychainItemRequestData.h:
        * Shared/mac/SecKeychainItemResponseData.cpp:
        * Shared/mac/SecKeychainItemResponseData.h:
        * UIProcess/WebProcessProxy.h:
        (WebKit):
        (WebProcessProxy):
        * WebProcess/mac/WebProcessMac.mm:

2012-05-15  Andreas Kling  <kling@webkit.org>

        Deep copy PluginModuleInfo before passing across thread boundary.
        <http://webkit.org/b/86491>
        <rdar://problem/11451178>

        Reviewed by Anders Carlsson.

        Since the vector of PluginModuleInfo objects returned by PluginInfoStore::plugins()
        can end up being passed to another thread, we should clone it to make sure it's
        safe to do so.

        No new tests, speculative use-after-free fix.

        * Shared/Plugins/PluginModuleInfo.h:
        (PluginModuleInfo):
        (WebKit::PluginModuleInfo::isolatedCopy):
        * UIProcess/Plugins/PluginInfoStore.cpp:
        (WebKit::PluginInfoStore::plugins):

2012-05-15  Andy Estes  <aestes@apple.com>

        Guard Netscape plug-in code with ENABLE(NETSCAPE_PLUGIN_API)
        https://bugs.webkit.org/show_bug.cgi?id=86496

        Reviewed by Dan Bernstein.

        * Shared/Plugins/Netscape/NetscapePluginModule.cpp:
        * Shared/Plugins/Netscape/NetscapePluginModule.h:
        * Shared/Plugins/Netscape/mac/NetscapePluginModuleMac.mm: